--- a/web/main.html
+++ b/web/main.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <link rel="stylesheet" type="text/css" href="main.css">
-</head>
+    <head>
+        <link rel="stylesheet" href="main.css">
+    </head>
 <body>
     <div id="container">
         <div id="background">
@@ -17,7 +17,7 @@
 
     <script>
         function go() {
-            window.location.href = "next.html"; // 새로운 페이지로 이동
+            window.location.href = "next.html";
         }
     </script>
 </body>
